Deal with updates

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - 8080:8080
     environment:
       DB_HOST: postgres
+      DB_USER: postgres
       POSTGRES_PASSWORD:
     volumes:
       - .:/app/
