--- a/Dockerfile-backend
+++ b/Dockerfile-backend
@@ -1,8 +1,9 @@
 FROM ubuntu:16.04
-RUN apt-get update
-RUN apt-get install -y postgresql-server-dev-all
-RUN apt-get install -y python3-dev
-RUN apt-get install -y python3-pip
+RUN apt-get update && \
+    apt-get install -y postgresql-server-dev-all && \
+    apt-get install -y python3-dev && \
+    apt-get install -y python3-pip && \
+    apt-get install -y libgeos-dev
 RUN pip3 install uwsgi
 ADD /requirements.txt /app/
 WORKDIR /app
