Add postgis-scripts to postgis install.

--- a/Dockerfile-postgres
+++ b/Dockerfile-postgres
@@ -1,4 +1,4 @@
 FROM postgres:9.5
 RUN apt-get update
-RUN apt-get install -y postgis
+RUN apt-get install -y postgis postgresql-9.5-postgis-scripts
 ADD /setup.sql /docker-entrypoint-initdb.d/
